css/main.css
html,
body {
    margin: 0;
    height: 100%;
    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
    font-size: 16px;
}

#main_canvas {
    display: block;
    width: 100%;
    height: 100%;
    background-color: #192633;
}

#logo {
    position: absolute;
    top: 5vh;
    left: 5vh;
    z-index: 100;
}

#logo img {
    width: 10vw;
}

#menu {
    position: absolute;
    top: 0;
    left: 0;
    height: 100vh;
    padding-left: 3vw;
    background: linear-gradient(90deg, #192633, transparent);
}

.menu_fade_in {
    animation: menu_fade_in 600ms;
    animation-fill-mode: forwards;
}

.menu_fade_out {
    animation: menu_fade_out 600ms;
    animation-fill-mode: forwards;
}

.swiper {
    position: relative;
    top: 50%;
    transform: translateY(-50%);
    height: 50vh;
    width: 15rem;
    -webkit-mask-image: linear-gradient(180deg, #000 5%, #00000085 50%, transparent 95%);
}

.swiper-slide {
    display: flex;
    justify-content: left;
    align-items: center;
    text-align: center;
}

.swiper-slide button {
    background: none;
    border: none;
    padding: 0;
    font-size: 120%;
    font-weight: lighter;
    text-align: left;
    color: #e3e3e3;
}

.swiper-slide-active button {
    font-weight: bold;
}

.swiper-scrollbar {
    visibility: hidden;
}

.info_block {
    position: absolute;
    top: 10rem;
    left: 2rem;
    width: 45vw;
    color: #e3e3e3;
    opacity: 0;
    transition: opacity 600ms;
}

.info_block_content {
    padding-right: 2rem;
    max-height: 50vh;
    overflow: scroll;
    overflow-y: auto;
}

.info_block_return {
    background: none;
    border: none;
    margin: 1.5rem 0 0 0;
    text-align: left;
    font-size: 110%;
    font-weight: bold;
    color: #e3e3e3;
}

.info_block_return:hover {
    cursor: pointer;
}

.info_block_return span {
    text-decoration: underline;
}

#scroll_down_footer {
    position: absolute;
    bottom: 3vh;
    width: 100%;
    text-align: center;
    font-weight: lighter;
    font-style: italic;
    opacity: 0.75;
    color: #e3e3e3;
}

.styled_scrollbar {
    /* Foreground, Background */
    scrollbar-color: #D9D9D9 #d9d9d940;
  }

  .styled_scrollbar::-webkit-scrollbar {
    width: 7px;
    height: 0px;
  }

  .styled_scrollbar::-webkit-scrollbar-thumb {
    border-radius: 10px;
    background: #D9D9D9;
  }

  .styled_scrollbar::-webkit-scrollbar-track {
    border-radius: 10px;
    background: #d9d9d940;
  }

@keyframes menu_fade_in {
0% {
    opacity: 0;
    display: none;
}

100% {
    opacity: 1;
    display: block;
}
}

@keyframes menu_fade_out {
0% {
    opacity: 1;
    display: block;
}

100% {
    opacity: 0;
    display: none;
}
}

